# testing_ceres

./: 3_link.cpp  3_link.xml  6_link.cpp  6_link.xml  CMakeLists.txt  check_eigen.cpp  kdl_test.cpp  main.cpp  parse_urdf.cpp  parse_urdf.h  reference.cpp  test_quat_inv.cpp  testglm.cpp  urdf.xml
